--- a/packages/fields-wysiwyg-tinymce/package.json
+++ b/packages/fields-wysiwyg-tinymce/package.json
@@ -15,9 +15,7 @@
     "@k5js/build-field-types": "^0.0.0",
     "@k5js/fields": "^0.0.0",
     "@k5ui/fields": "^0.0.0",
-    "@k5ui/icons": "^0.0.0",
-    "@k5ui/input": "^0.0.0",
-    "@k5ui/theme": "^0.0.0",
+    "@tinymce/tinymce-react": "^3.5.0",
     "cuid": "^2.1.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
